--- a/ksa/ksa/pom.xml
+++ b/ksa/ksa/pom.xml
@@ -25,7 +25,26 @@
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 		</dependency>
-		
+		<dependency>
+   	 	<groupId>org.apache.logging.log4j</groupId>
+		  <artifactId>log4j-core</artifactId>
+		  <version>2.6.1</version>
+	</dependency>
+	<dependency>
+		  <groupId>io.netty</groupId>
+		  <artifactId>netty-all</artifactId>
+		  <version>4.0.33.Final</version>
+	</dependency>
+	<dependency>
+		  <groupId>org.springframework.boot</groupId>
+		  <artifactId>spring-boot-starter-web</artifactId>
+		  <version>1.4.0.RELEASE</version>
+	</dependency>
+	<dependency>
+      		  <groupId>org.apache.shiro</groupId>
+      		  <artifactId>shiro-core</artifactId>
+		  <version>1.2.0</version>
+	</dependency>
 		<!-- test -->
 		<dependency>
 			<groupId>junit</groupId>
